# miplog

./: .gitignore  Cargo.toml  FORMAT.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
examples/: scip_demo.rs
src/: input.rs  lib.rs  output.rs  python.rs  schema.rs  text.rs
src/solvers/: cbc.rs  copt.rs  cplex.rs  gurobi.rs  highs.rs  mod.rs  mosek.rs  optverse.rs  progress.rs  scip.rs  xpress.rs
tests/: generate_logs.py  generated_logs.rs  integration.rs
tests/fixtures/: infeasible.mps  tinylp.mps  unbounded.mps
tests/fixtures/logs/: README.md  highs.json  scip.humanlog  scip.mlog
