[package]
name = "miplog"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Parse MIP/LP solver log files (Gurobi, Xpress, SCIP, HiGHS, COPT, …) into a unified, serde-serializable schema."
repository = "https://github.com/mmghannam/miplog"
readme = "README.md"
keywords = ["mip", "optimization", "solver", "parser", "log"]
categories = ["parser-implementations", "science"]
exclude = [
    ".github/",
]

[lib]
# `rlib` keeps the crate usable from other Rust code.
# `cdylib` lets maturin build a Python extension from the same source.
crate-type = ["cdylib", "rlib"]

[features]
# Enable when building via maturin; not needed for `cargo build`/`cargo install`.
python = ["dep:pyo3", "dep:pythonize"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
pythonize = { version = "0.22", optional = true }

[[bin]]
name = "miplog"
path = "src/bin/miplog.rs"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
